--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "frontend",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
     "build-only": "vite build",
+    "dev": "vite",
+    "preview": "vite preview",
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
     "pinia": "^2.2.6",
+    "pinia-plugin-persistedstate": "^4.1.3",
     "vue": "^3.5.12",
+    "vue-draggable-next": "^2.2.1",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
@@ -20,10 +21,15 @@
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.20",
     "npm-run-all2": "^7.0.1",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "typescript": "~5.6.3",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4",
+    "vue-cli-plugin-tailwind": "~3.0.0",
     "vue-tsc": "^2.1.10"
-  }
+  },
+  "type": "module"
 }
