--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "pinia": "^2.2.6",
     "pinia-plugin-persistedstate": "^4.1.3",
     "vue": "^3.5.12",
